test_case/Rust-GCC_gccrs/2177_1536867040.rs

#[doc] // { dg-error "...doc.. cannot be an empty attribute" }
struct Foo;
